[gd_scene load_steps=8 format=3 uid="uid://da71rnvdi7nh7"]

[ext_resource type="Script" path="res://LinearProjectile.gd" id="1_wv5ko"]
[ext_resource type="Texture2D" uid="uid://dy8fsivj6gbu7" path="res://assets/textures/icon.svg" id="2_bixa7"]
[ext_resource type="Script" path="res://librarian.gd" id="3_s4l11"]
[ext_resource type="Script" path="res://coolMethods.gd" id="4_w0asu"]
[ext_resource type="Script" path="res://wallHandler.gd" id="5_4w2nv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_foowx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eiet5"]

[node name="mainScene" type="Node"]

[node name="test" type="Area2D" parent="."]
script = ExtResource("1_wv5ko")

[node name="Sprite2D" type="Sprite2D" parent="test"]
texture = ExtResource("2_bixa7")

[node name="hitbox" type="CollisionShape2D" parent="test"]
shape = SubResource("RectangleShape2D_foowx")

[node name="commonObjLibrary" type="Node" parent="."]
script = ExtResource("3_s4l11")

[node name="linearProjectile" type="Area2D" parent="commonObjLibrary"]
script = ExtResource("1_wv5ko")

[node name="Sprite2D" type="Sprite2D" parent="commonObjLibrary/linearProjectile"]
texture = ExtResource("2_bixa7")

[node name="hitbox" type="CollisionShape2D" parent="commonObjLibrary/linearProjectile"]
shape = SubResource("RectangleShape2D_foowx")

[node name="WALL" type="Area2D" parent="commonObjLibrary"]
position = Vector2(439, 435)
script = ExtResource("5_4w2nv")

[node name="Sprite2D" type="Sprite2D" parent="commonObjLibrary/WALL"]
position = Vector2(-333.25, -13)
scale = Vector2(8.01953, 1)
texture = ExtResource("2_bixa7")

[node name="hitbox" type="CollisionShape2D" parent="commonObjLibrary/WALL"]
shape = SubResource("RectangleShape2D_eiet5")

[node name="coolMethods" type="Node" parent="commonObjLibrary"]
script = ExtResource("4_w0asu")

[node name="itemStorage" type="Node" parent="commonObjLibrary"]
